--- a/lta_detection.conf
+++ b/lta_detection.conf
@@ -1,7 +1,7 @@
 resources_dir = "/nfs/research/icortes/belzen/resources/"
 results_dir="/nfs/research/icortes/belzen/results/lta_detection/multi_tsg/"
 metadata_dir="/nfs/research/icortes/belzen/data/metadata/"
-
+plot_dir=paste0(results_dir,"plots/")
 
 filesystem="/nfs/research/icortes/DATA/TCGA_WGS/hmf/data_freeze_20240617/output_files/"
 sv_filtered_files_dir = paste0(filesystem,"sv_filtered_files/")
@@ -14,7 +14,7 @@ wgd_score_dir="/nfs/research/icortes/belzen/results/TCGA_WGD_analysis/v1/"
 
 chromothripsis_clusters_path = "/nfs/research/icortes/DATA/TCGA_WGS/hmf/data_freeze_20240617/shatterseek/chromothripsis_clusters.tsv"
 cohort_path="/nfs/research/icortes/DATA/TCGA_WGS/hmf/data_freeze_20240617/purity_table.tsv"
- 
+tcga_cohort_path=cohort_path 
 #cohort
 #dataset_selection_label="TCGA-SARC"  
 
