--- a/osteos.lta_detection.conf
+++ b/osteos.lta_detection.conf
@@ -22,7 +22,8 @@ dataset_selection_label="osteos"
 #flag_run_single_sample=T
 #target_sample="TCGA-SARC_TCGA-PC-A5DM_TCGA-PC-A5DM-01A-11D-A813-36"
 
- sample_table_path=paste0(metadata_dir,"OS_master_clinical_data_v2.csv")
-  driver_masterfile_path = paste0(metadata_dir,"PerDonor_master_withBurdens_mainDrivers_28_Oct2023.csv")
-  suptable1_path=paste0(metadata_dir,"OS_master_table_s1.tsv")
+sample_table_path=paste0(metadata_dir,"OS_master_clinical_data_v2.csv")
+ driver_masterfile_path = paste0(metadata_dir,"PerDonor_master_withBurdens_mainDrivers_28_Oct2023.csv")
+ suptable1_path=paste0(metadata_dir,"OS_master_table_s1.tsv")
 
+lta_tsg_disruption_lst=c("TP53")
