--- a/lta_detection.conf
+++ b/lta_detection.conf
@@ -1,24 +1,25 @@
-resources_dir = "/nfs/research/icortes/belzen/resources/"
-results_dir="/nfs/research/icortes/belzen/results/lta_detection/multi_tsg/"
-metadata_dir="/nfs/research/icortes/belzen/data/metadata/"
+resources_dir = ""
+results_dir=""
+metadata_dir=""
 plot_dir=paste0(results_dir,"plots/")
 
-filesystem="/nfs/research/icortes/DATA/TCGA_WGS/hmf/data_freeze_20240617/output_files/"
+#hmf output dirs
+filesystem=""
 sv_filtered_files_dir = paste0(filesystem,"sv_filtered_files/")
 cn_files_dir = paste0(filesystem,"cn_files/")
 driver_files_dir = paste0(filesystem,"driver_files/")
 driver_germline_files_dir=paste0(filesystem,"driver_germline_files/")
 
-wgd_score_dir="/nfs/research/icortes/belzen/results/TCGA_WGD_analysis/v1/"
+#shatterseek output file chromothripsis_clusters.tsv
+chromothripsis_clusters_path = "chromothripsis_clusters.tsv"
 
-
-chromothripsis_clusters_path = "/nfs/research/icortes/DATA/TCGA_WGS/hmf/data_freeze_20240617/shatterseek/chromothripsis_clusters.tsv"
-cohort_path="/nfs/research/icortes/DATA/TCGA_WGS/hmf/data_freeze_20240617/purity_table.tsv"
+#hmf output file
+cohort_path="purity_table.tsv"
 tcga_cohort_path=cohort_path 
 #cohort
 #dataset_selection_label="TCGA-SARC"  
 
 #single sample
 #flag_run_single_sample=T
-#target_sample="TCGA-SARC_TCGA-PC-A5DM_TCGA-PC-A5DM-01A-11D-A813-36"
+#target_sample=""
   
